Changed to a different google font and fixed some spacing.

--- a/less/index.less
+++ b/less/index.less
@@ -4,7 +4,7 @@
    License: none (public domain)
 */
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Source+Serif+Pro');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab|Source+Serif+Pro');
 html,
 body,
 div,
@@ -153,8 +153,7 @@ html {
 }
 
 // variables
-@font-stack: 'Roboto',
-serif;
+@font-stack: 'Roboto Slab', serif;
 @title-font: 'Source Serif Pro',
 serif;
 @font-color: #444;
@@ -276,7 +275,10 @@ body {
                 flex-direction: column;
                 text-align: center;
                 flex-wrap: wrap;
-            }
+			}
+			h2,h3 {
+			padding: 5px 0;
+			}
         }
         .education {
             .bor-bot();
@@ -288,7 +290,10 @@ body {
                 flex-direction: column;
                 text-align: center;
                 flex-wrap: wrap;
-            }
+			}
+			h2,h3 {
+				padding: 5px 0;
+				}
         }
     }
     footer {
